--- a/hls4ml-frame-grabber_tutorial.ipynb
+++ b/hls4ml-frame-grabber_tutorial.ipynb
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "id": "11ea102d-528e-4ca4-aeae-e5f741174931",
    "metadata": {},
    "outputs": [],
@@ -951,7 +951,8 @@
     "import os\n",
     "from src.util.print import print_dict\n",
     "from src.preprocessing.mnist import pad_images\n",
-    "from src.preprocessing.stripes import gen_stripe_pattern, replace_stripe_order"
+    "from src.preprocessing.stripes import gen_stripe_pattern, replace_stripe_order\n",
+    "from src.preprocessing.myproject_axi import replace_model_out_depth"
    ]
   },
   {
@@ -1541,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "e2f578f1",
    "metadata": {},
    "outputs": [
@@ -1549,8 +1550,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copy this array to the stripe_order constant in CustomLogic.h:  {3, 4, 2, 5, 1, 6, 0, 7}\n",
-      "static const unsigned stripe_order[NUM_STRIPES] = '{3, 4, 2, 5, 1, 6, 0, 7}';\n",
+      "static const unsigned stripe_order[NUM_STRIPES] = {3, 4, 2, 5, 1, 6, 0, 7};\n",
       " replaced with static const unsigned stripe_order[NUM_STRIPES] = {3, 4, 2, 5, 1, 6, 0, 7};\n"
      ]
     }
@@ -1611,6 +1611,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "93666d37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    static const unsigned MODEL_OUT_DEPTH = /* CustomLogic: INSERT LAST NETWORK LAYER OUTPUT STREAM HERE */;\n",
+      " replaced with     static const unsigned MODEL_OUT_DEPTH = 1;\n"
+     ]
+    }
+   ],
+   "source": [
+    "replace_model_out_depth(f\"{FRAME_GRABBER_DIR}/05_model_design_hls/srcs/myproject_axi.cpp\", 1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7b896a1e",
    "metadata": {},
@@ -1620,37 +1639,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "01e534e4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    #pragma HLS STREAM variable=input_arr_split_reordered[0] depth=PACKETS_PER_STRIPE\n",
-      "    #pragma HLS STREAM variable=input_arr_split_reordered[1] depth=PACKETS_PER_STRIPE\n",
-      "    #pragma HLS STREAM variable=input_arr_split_reordered[2] depth=PACKETS_PER_STRIPE\n",
-      "    #pragma HLS STREAM variable=input_arr_split_reordered[3] depth=PACKETS_PER_STRIPE\n",
-      "    #pragma HLS STREAM variable=input_arr_split_reordered[4] depth=PACKETS_PER_STRIPE\n",
-      "    #pragma HLS STREAM variable=input_arr_split_reordered[5] depth=PACKETS_PER_STRIPE\n",
-      "    #pragma HLS STREAM variable=input_arr_split_reordered[6] depth=PACKETS_PER_STRIPE\n",
-      "    #pragma HLS STREAM variable=input_arr_split_reordered[7] depth=PACKETS_PER_STRIPE\n",
-      "\n",
-      "\n",
-      "Copy the above HLS to myproject_axi.cpp in the appropriate location\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def generate_pragma_lines(NUM_STRIPES):\n",
-    "    for i in range(NUM_STRIPES):\n",
-    "        print(f'    #pragma HLS STREAM variable=input_arr_split_reordered[{i}] depth=PACKETS_PER_STRIPE')\n",
+    "from src.preprocessing.myproject_axi import replace_pragma_lines\n",
     "\n",
-    "generate_pragma_lines(int(NUM_STRIPES))  # This will generate 5 lines with incremented indices.\n",
+    "replace_pragma_lines(f\"{FRAME_GRABBER_DIR}/05_model_design_hls/srcs/myproject_axi.cpp\", int(NUM_STRIPES))\n",
+    "\n",
+    "# def generate_pragma_lines(NUM_STRIPES):\n",
+    "#     for i in range(NUM_STRIPES):\n",
+    "#         print(f'    #pragma HLS STREAM variable=input_arr_split_reordered[{i}] depth=PACKETS_PER_STRIPE')\n",
+    "\n",
+    "# generate_pragma_lines(int(NUM_STRIPES))  # This will generate 5 lines with incremented indices.\n",
     "\n",
     "\n",
-    "print(\"\\n\\nCopy the above HLS to myproject_axi.cpp in the appropriate location\")"
+    "# print(\"\\n\\nCopy the above HLS to myproject_axi.cpp in the appropriate location\")"
    ]
   },
   {
