replace prag lines working

--- a/hls4ml-frame-grabber_tutorial.ipynb
+++ b/hls4ml-frame-grabber_tutorial.ipynb
@@ -1639,23 +1639,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "id": "01e534e4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.preprocessing.myproject_axi import replace_pragma_lines\n",
     "\n",
-    "replace_pragma_lines(f\"{FRAME_GRABBER_DIR}/05_model_design_hls/srcs/myproject_axi.cpp\", int(NUM_STRIPES))\n",
-    "\n",
-    "# def generate_pragma_lines(NUM_STRIPES):\n",
-    "#     for i in range(NUM_STRIPES):\n",
-    "#         print(f'    #pragma HLS STREAM variable=input_arr_split_reordered[{i}] depth=PACKETS_PER_STRIPE')\n",
-    "\n",
-    "# generate_pragma_lines(int(NUM_STRIPES))  # This will generate 5 lines with incremented indices.\n",
-    "\n",
-    "\n",
-    "# print(\"\\n\\nCopy the above HLS to myproject_axi.cpp in the appropriate location\")"
+    "replace_pragma_lines(f\"{FRAME_GRABBER_DIR}/05_model_design_hls/srcs/myproject_axi.cpp\", int(NUM_STRIPES))"
    ]
   },
   {
